@@ -2918,6 +2918,8 @@
   //List box
   bool OSDMenuListBoxInitialize(bool AllowScrollingOfLongText, bool HasValueColumn, bool NumberedItems, bool ScrollLoop, const char *Title, dword x, dword width, bool OSDUpdate);
   bool OSDMenuListBoxIsVisible(void);
+  void OSDMenuListBoxDestroy(void);
+  void OSDMenuListBoxDestroyNoOSDUpdate(void);
 
   //Memo
   void OSDMemoInitialize(bool ScrollLoop, const char *TitleLeft, const char *TitleRight, const char *Text);
