@@ -1149,3 +1149,4 @@ The following functions accept any form a path. The INI and language INI functio
             Added: New menu type "ListBox" (supporting basically all existing menu features)
             Added: Restrict the buttons in list boxes to 2 lines
             Added: OSDMenuListBoxIsVisible()
+            Added: OSDMenuListBoxDestroy() and OSDMenuListBoxDestroyNoOSDUpdate()
